flux/apps/int/servarr/flaresolverr-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flaresolverr
  labels:
    app.kubernetes.io/name: flaresolverr
    app.kubernetes.io/instance: flaresolverr
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: flaresolverr
      app.kubernetes.io/instance: flaresolverr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: flaresolverr
        app.kubernetes.io/instance: flaresolverr
    spec:
      containers:
        - name: flaresolverr
          image: ghcr.io/flaresolverr/flaresolverr:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8191
              name: http
          resources:
            requests:
              cpu: 100m
              memory: 512Mi
            limits:
              cpu: 500m
              memory: 3Gi
          livenessProbe:
            httpGet:
              path: /
              port: 8191
            initialDelaySeconds: 30
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /
              port: 8191
            initialDelaySeconds: 10
            periodSeconds: 10
