flux/apps/int/servarr/prowlarr-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
  labels:
    app.kubernetes.io/name: prowlarr
    app.kubernetes.io/instance: prowlarr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: prowlarr
      app.kubernetes.io/instance: prowlarr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: prowlarr
        app.kubernetes.io/instance: prowlarr
    spec:
      containers:
        - name: prowlarr
          image: linuxserver/prowlarr:2.3.2-nightly
          ports:
            - containerPort: 9696
              name: http
          volumeMounts:
            - name: config
              mountPath: /config
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              memory: 512Mi
          startupProbe:
            httpGet:
              path: /
              port: 9696
            failureThreshold: 30
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: 9696
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 9696
            periodSeconds: 5
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: prowlarr-config-pvc
