flux/apps/int/servarr/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: radarr-svc
  labels:
    app.kubernetes.io/name: radarr
    app.kubernetes.io/instance: radarr
spec:
  selector:
    app.kubernetes.io/name: radarr
    app.kubernetes.io/instance: radarr
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: http
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: sonarr-svc
  labels:
    app.kubernetes.io/name: sonarr
    app.kubernetes.io/instance: sonarr
spec:
  selector:
    app.kubernetes.io/name: sonarr
    app.kubernetes.io/instance: sonarr
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: prowlarr-svc
  labels:
    app.kubernetes.io/name: prowlarr
    app.kubernetes.io/instance: prowlarr
spec:
  selector:
    app.kubernetes.io/name: prowlarr
    app.kubernetes.io/instance: prowlarr
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: bazarr-svc
  labels:
    app.kubernetes.io/name: bazarr
    app.kubernetes.io/instance: bazarr
spec:
  selector:
    app.kubernetes.io/name: bazarr
    app.kubernetes.io/instance: bazarr
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: profilarr-svc
  labels:
    app.kubernetes.io/name: profilarr
    app.kubernetes.io/instance: profilarr
spec:
  selector:
    app.kubernetes.io/name: profilarr
    app.kubernetes.io/instance: profilarr
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: watcharr-svc
  labels:
    app.kubernetes.io/name: watcharr
    app.kubernetes.io/instance: watcharr
spec:
  selector:
    app.kubernetes.io/name: watcharr
    app.kubernetes.io/instance: watcharr
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: flaresolverr-svc
  labels:
    app.kubernetes.io/name: flaresolverr
    app.kubernetes.io/instance: flaresolverr
spec:
  selector:
    app.kubernetes.io/name: flaresolverr
    app.kubernetes.io/instance: flaresolverr
  ports:
    - name: http
      protocol: TCP
      port: 8191
      targetPort: http
